--- a/main.html
+++ b/main.html
@@ -1,33 +1,81 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Multiple Promises Tracker</title>
+    <style>
+        table {
+            width: 50%;
+            border-collapse: collapse;
+            margin: 20px auto;
+            font-family: Arial, sans-serif;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 10px;
+            text-align: center;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+    </style>
+</head>
+<body>
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-  </head>
+    <h2 style="text-align: center;">Multiple Promises Resolution Tracker</h2>
 
-  <body>
-    <!-- the entire body must be written by student -->
-    <table class="table table-striped table-hover table-bordered">
-      <thead>
-        <tr>
-          <th>Promise Name</th>
-          <th>Time taken (s)</th>
-        </tr>
-      </thead>
-      <tbody id="output"></tbody>
+    <table>
+        <thead>
+            <tr>
+                <th>Promise</th>
+                <th>Time Taken (Seconds)</th>
+            </tr>
+        </thead>
+        <tbody id="output">
+            <tr>
+                <td colspan="2">Loading...</td>
+            </tr>
+        </tbody>
     </table>
 
-    <script type="text/javascript" src="./script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script>
+        function createRandomPromise(index) {
+            return new Promise(resolve => {
+                const time = (Math.random() * 2 + 1).toFixed(3); // Random time between 1.000 and 3.000
+                setTimeout(() => resolve({ index, time }), time * 1000);
+            });
+        }
+
+        // Create 3 promises
+        const promise1 = createRandomPromise(1);
+        const promise2 = createRandomPromise(2);
+        const promise3 = createRandomPromise(3);
+
+        // Display results after all promises resolve
+        Promise.all([promise1, promise2, promise3]).then(results => {
+            const outputTable = document.getElementById("output");
+
+            // Remove "Loading..." row
+            outputTable.innerHTML = "";
+
+            let maxTime = 0;
+
+            results.forEach(result => {
+                const row = document.createElement("tr");
+                row.innerHTML = `<td>Promise ${result.index}</td><td>${result.time}</td>`;
+                outputTable.appendChild(row);
+                
+                // Track the max time for total calculation
+                maxTime = Math.max(maxTime, parseFloat(result.time));
+            });
+
+            // Add total time row
+            const totalRow = document.createElement("tr");
+            totalRow.innerHTML = `<td><b>Total</b></td><td><b>${maxTime.toFixed(3)}</b></td>`;
+            outputTable.appendChild(totalRow);
+        });
+    </script>
+
+</body>
 </html>
