--- a/main.html
+++ b/main.html
@@ -32,11 +32,11 @@
                 <th>Time Taken (Seconds)</th>
             </tr>
         </thead>
-        <tbody id="output">
-            <tr>
-                <td colspan="2">Loading...</td>
-            </tr>
-        </tbody>
+       <tbody id="output">
+    <tr id="loading">  <!-- Ensure Cypress can find this -->
+        <td colspan="2">Loading...</td>
+    </tr>
+</tbody>
     </table>
 
     <script>
